--- a/src/app/dropped/dropped.component.css
+++ b/src/app/dropped/dropped.component.css
@@ -32,9 +32,13 @@
   color: red;
 }
 
-.reschedule,
+.reevaluate,
 .reject,
 .leads,
 .captured {
     margin: auto;
+}
+
+.reevaluate {
+  cursor: pointer;
 }
