--- a/src/app/dropped/dropped.component.html
+++ b/src/app/dropped/dropped.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-4 row">
         <span class="col-6 reject">Rejected</span>
-        <span class="col-6 reschedule" (click)="onReschedule(i)">Reschedule</span>
+        <span class="col-6 reevaluate" (click)="onReschedule(i)">Re-evaluate</span>
     </div>
     <div class="col-2 row">
         <span class="col-6 leads">{{candidate.reference.leads}}</span>
